--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Socket.IO chat</title>
-    <style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
-
-      #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-      #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-      #input:focus { outline: none; }
-      #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
-
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages > li { padding: 0.5rem 1rem; }
-      #messages > li:nth-child(odd) { background: #efefef; }
-    </style>
+    <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
+    <div id="nickname-area">
+      <form id="nickname-form" action="">
+        <label for="nickname">Enter nickname:</label>
+        <input id="nickname" autocomplete="off" maxlength="32" />
+        <button type="submit">Save</button>
+      </form>
+      <div id="nickname-display" class="hidden"></div>
+    </div>
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
@@ -25,6 +22,7 @@
     <script>
       let counter = 0;
       const MAX_MESSAGES = 500;
+      let nickname = '';
 
       const socket = io({
         ackTimeout: 10000,
@@ -37,6 +35,22 @@
       const form = document.getElementById('form');
       const input = document.getElementById('input');
       const messages = document.getElementById('messages');
+      const nicknameForm = document.getElementById('nickname-form');
+      const nicknameInput = document.getElementById('nickname');
+      const nicknameDisplay = document.getElementById('nickname-display');
+      const sendButton = form?.querySelector('button');
+
+      const toggleChatControls = (enabled) => {
+        if (input) {
+          input.disabled = !enabled;
+        }
+
+        if (sendButton) {
+          sendButton.disabled = !enabled;
+        }
+      };
+
+      toggleChatControls(false);
 
       const appendMessage = (content) => {
         const item = document.createElement('li');
@@ -50,8 +64,40 @@
         window.scrollTo(0, document.body.scrollHeight);
       };
 
+      if (nicknameForm) {
+        nicknameForm.addEventListener('submit', (event) => {
+          event.preventDefault();
+
+          const value = nicknameInput.value.trim();
+          if (!value) {
+            nicknameInput.focus();
+            return;
+          }
+
+          nickname = value;
+          toggleChatControls(true);
+          nicknameForm.classList.add('hidden');
+
+          if (nicknameDisplay) {
+            nicknameDisplay.textContent = `Your nickname: ${nickname}`;
+            nicknameDisplay.classList.remove('hidden');
+          }
+
+          if (input) {
+            input.focus();
+          }
+        });
+      }
+
       form.addEventListener('submit', (e) => {
         e.preventDefault();
+
+        if (!nickname) {
+          if (nicknameInput) {
+            nicknameInput.focus();
+          }
+          return;
+        }
 
         const text = input.value.trim();
         if (!text) {
@@ -61,7 +107,7 @@
         const clientOffset = `${socket.id}-${counter++}`;
         socket.emit(
           'chat message',
-          text,
+          `${nickname}: ${text}`,
           clientOffset,
           (ack = {}) => {
             if (!ack.ok) {
